Archive2/20/eed4f98326d179/output
main.cpp:16:12: error: expected expression
    s = b+ ; // compile error syntax error : ';'    
           ^
main.cpp:18:10: error: cannot increment value of type 'B'
    s = b++; 
        ~^
2 errors generated.
